<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/default_image"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/articles"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_dev"
            android:icon="@drawable/articles"
            android:title="Developer Information" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
