<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/cardview_light_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/contact"
        android:textSize="15sp"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/location"
        android:layout_margin="20dp"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/emailH"
        android:layout_margin="20dp"
        android:textSize="15sp"
        />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
